L3/S1/Info/Compil/TD2/mini-python/tests/good/range1.py
print(len(list(range(7))))

