L3/S1/Info/Compil/TD2/mini-python/tests/bad/bool2.py
print(1>2 or len(1))
